# flight-delay-lakehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-checks.yml
.streamlit/: config.toml
dashboard/: README.md  __init__.py  app.py  charts.py  config.py  data.py  metrics.py  ui.py  verify.py
dashboard/views/: __init__.py  overview.py  reliability.py  routes.py  timing.py
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: delay_measures.sql  generate_schema_name.sql
dbt/models/bronze/: README.md  _bronze__sources.yml
dbt/models/gold/: _gold__models.yml
dbt/models/gold/dashboard/: _dashboard__models.yml  dash_airport_reliability.sql  dash_carrier_reliability.sql  dash_delays_by_time.sql  dash_monthly_trend.sql  dash_route_drilldown.sql
dbt/models/gold/marts/: mart_delays_by_airport.sql  mart_delays_by_carrier.sql  mart_delays_by_route.sql  mart_delays_by_schedule.sql  mart_delays_monthly.sql
dbt/models/gold/ml/: README.md  _ml__models.yml  ml_flight_features.sql
dbt/models/gold/shared/: int_historical_delay_rates.sql
dbt/models/gold/staging/: stg_gold__flights.sql  stg_gold__weather.sql
dbt/models/gold/star/: README.md  _star__models.yml  dim_airport.sql  dim_carrier.sql  dim_date.sql  fact_flights.sql
dbt/models/silver/: README.md  _silver__models.yml  airport_station_map.sql  silver_flights.sql  silver_isd_hourly.sql  silver_weather.sql  stg_airports.sql  stg_bts_flights.sql  stg_holidays.sql  stg_weather.sql  stg_weather_stations.sql
dbt/seeds/: README.md  airports.csv  holidays.csv
dbt/tests/: assert_flown_airports_have_timezone.sql  assert_ml_features_no_leakage.sql  assert_ml_weather_is_prior_day.sql  assert_ml_weather_obs_before_departure.sql
docs/benchmarks/: README.md  benchmark_query.sql
docs/dashboard/: dashboard_spec.md
ingestion/: README.md  __init__.py  airports.py  bts.py  bts_external_table.py  config.py  holidays_cal.py  isd.py  isd_external_table.py  util.py
ml/: README.md  __init__.py  audit.py  data.py  features.py  train.py
orchestration/: README.md  __init__.py  definitions.py
orchestration/assets/: __init__.py  bronze.py  dbt_layer.py  ml.py  reference.py
orchestration/jobs/: __init__.py
orchestration/resources/: __init__.py
